# -

./: .gitignore  LICENSE  LICENSE-ENHANCED-CN.md  README.md  eslint.config.js  index.html  netlify.toml  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  tsconfig.node.json  vercel.json  vite.config.js  vite.config.ts  vitest.config.ts  优化汇报.md  缺点.md
docs/: BUILD_RISK_REDUCTION.md  DEPLOY_NOW.md  FINAL_RELEASE_AUDIT.md  REQUIREMENTS_MATRIX.md  REVIEW_REPORT.md  V14_FIX_REPORT.md
public/: _headers  manifest.json  service-worker.js
scripts/: audit-private-requirements.mjs  build-release.mjs  generate-requirements-matrix.mjs  prepare-husky.cjs  render-readme.mjs  repair-feature-catalog.mjs  run-release-build.mjs
src/: App.tsx  index.ts  main.tsx  vite-env.d.ts
src/ai/: EthicsConstraint.ts  LLMBridge.ts  LLMWorker.ts  LocalThinker.ts  SocialGNN.ts  index.ts
src/api/: APIGateway.ts  BlockchainSync.ts  GenesisTwin.ts  GenesisTwinPanel.tsx  MacroEconomy.ts  index.ts
src/audio/: AudioEngine.ts  SpatialAudio.ts  index.ts
src/auth/: BiometricWallet.ts  SoulAnchor.tsx  WebAuthnManager.ts  index.ts
src/bench/: BenchmarkPanel.tsx  BenchmarkSuite.ts  CPUBenchmark.ts  GPUBenchmark.ts  MemoryBenchmark.ts  StorageBenchmark.ts  index.ts
src/benchmark/: PerformanceBenchmark.ts
src/blockchain/: Blockchain.ts
src/chat/: index.ts  (+4 more)
tests/: core.test.ts  setup.ts
wasm/: Cargo.toml  build.sh
wasm/src/: audio_synth.rs  bazi.rs  lib.rs  pathfinding.rs  quantum.rs  snn.rs
需求/: 无后端网站的补充.txt  顶级无后端网站需求.txt  顶级无后端网站需求_v13_高级补充协议.md
(+296 files in other folders)
