[package]
name = "omnis-apien-wasm"
version = "1.0.0"
edition = "2021"
authors = ["OMNIS APIEN Team"]
description = "永夜熵纪 - 核心计算 WASM 模块"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]
console_error_panic_hook = ["dep:console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.100"
js-sys = "0.3.70"
web-sys = { version = "0.3.70", features = [
  "console",
  "Performance",
  "Window",
] }
console_error_panic_hook = { version = "0.1.7", optional = true }
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1.0"
wee_alloc = { version = "0.4.5", optional = true }

# SIMD 支持
packed_simd = { version = "0.3", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.42"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
